fix for miss aligned main and sub

--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -66,6 +66,7 @@ body {
   font-weight: 400;
   letter-spacing: 35px;
   animation: moveInLeft 1s ease-out;
+  padding-left: 35px;
   /* animation-name: moveInLeft;
   animation-duration: 1s;
   animation-timing-function: ease-out; */
@@ -76,6 +77,7 @@ body {
   font-size: 20px;
   font-weight: 700;
   letter-spacing: 17.4px;
+  padding-left: 17.4px;
   animation: moveInRight 1s ease-out;
   margin-bottom: 40px;
 }
